合并采购需求

--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -21,6 +21,6 @@ spring:
 #server:
 #  port: 10000
 
-logging:
-  level:
-    com.tim.gulimall: debug
+#logging:
+#  level:
+#    com.tim.gulimall: debug
