--- a/gulimall-search/pom.xml
+++ b/gulimall-search/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <!-- 版本后由SpringBoot进行管理-->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
