--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -79,6 +79,11 @@
             <version>3.11.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!--使用spring-cloud-starter-alicloud-oss替代-->
         <!--        <dependency>-->
