--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
         <module>gulimall-ware</module>
         <module>gulimall-common</module>
         <module>gulimall-gateway</module>
+        <module>gulimall-search</module>
         <module>renren-fast</module>
+        <module>gulimall-auth-server</module>
+        <module>gulimall-third-part</module>
     </modules>
 
 </project>
