--- a/gulimall-gateway/src/main/resources/application.yaml
+++ b/gulimall-gateway/src/main/resources/application.yaml
@@ -46,3 +46,8 @@ spring:
           uri: lb://gulimall-search
           predicates:
             - Host=search.gulimall.com
+
+        - id: gulimall_search_route
+          uri: lb://gulimall-auth-server
+          predicates:
+            - Host=auth.gulimall.com
