社交登陆功能

--- a/gulimall-auth-server/src/main/resources/bootstrap.properties
+++ b/gulimall-auth-server/src/main/resources/bootstrap.properties
@@ -1,2 +1,7 @@
 spring.application.name=gulimall-auth-server
 spring.cloud.nacos.config.server-addr=192.168.110.20:8848
+spring.cloud.nacos.config.namespace=bf3f3b75-f177-42c9-b9f0-4190bf6c2a3d
+spring.cloud.nacos.config.group=dev
+spring.cloud.nacos.config.extension-configs[0].data-id=oauth.yaml
+spring.cloud.nacos.config.extension-configs[0].group=dev
+spring.cloud.nacos.config.extension-configs[0].refresh=true
