--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>renren-fast</module>
         <module>gulimall-auth-server</module>
         <module>gulimall-third-part</module>
+        <module>gulimall-cart</module>
     </modules>
 
 </project>
