--- a/gulimall-cart/src/main/resources/application.yaml
+++ b/gulimall-cart/src/main/resources/application.yaml
@@ -1,27 +1,27 @@
 spring:
+  redis:
+    host: 192.168.110.20
+    port: 6379
   thymeleaf:
     cache: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
   application:
-    name: gulimall-auth-server
+    name: gulimall-cart
   cloud:
     nacos:
       discovery:
         server-addr: 192.168.110.20:8848
-  redis:
-    host: 192.168.110.20
-    port: 6379
-  session:
-    store-type: redis
-
 
 server:
-  port: 20000
-  servlet:
-    session:
-      timeout: 30m
+  port: 30010
 
 logging:
   level:
     com.tim.gulimall: debug
+
+gulimall:
+  thread:
+    core-size: 20
+    max-size: 200
+    keep-alive-time: 10
