--- a/gulimall-gateway/src/main/resources/application.yaml
+++ b/gulimall-gateway/src/main/resources/application.yaml
@@ -47,7 +47,12 @@ spring:
           predicates:
             - Host=search.gulimall.com
 
-        - id: gulimall_search_route
+        - id: gulimall_auth_route
           uri: lb://gulimall-auth-server
           predicates:
             - Host=auth.gulimall.com
+
+        - id: gulimall_cart_route
+          uri: lb://gulimall-cart
+          predicates:
+            - Host=cart.gulimall.com
