--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -83,6 +83,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
 
         <!--使用spring-cloud-starter-alicloud-oss替代-->
         <!--        <dependency>-->
