--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -9,6 +9,8 @@ spring:
       cache-null-values: true         # 是否允许缓存空值
   thymeleaf:
     cache: false
+  session:
+    store-type: redis
 gulimall:
   thread:
     core-size: 20
