--- a/gulimall-search/src/main/resources/application.yaml
+++ b/gulimall-search/src/main/resources/application.yaml
@@ -4,11 +4,11 @@ spring:
     cache: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
-  #  datasource:
-  #    username: root
-  #    password: root
-  #    url: jdbc:mysql://192.168.110.20:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.110.20
+    port: 6379
+  session:
+    store-type: redis
   application:
     name: gulimall-search
   cloud:
@@ -18,11 +18,6 @@ spring:
   elasticsearch:
     rest:
       uris: 192.168.110.20:9200
-#mybatis-plus:
-#  mapper-locations: classpath:/mapper/**/*.xml
-#  global-config:
-#    db-config:
-#      id-type: auto
 server:
   port: 12000
 
