--- a/gulimall-ware/src/main/resources/application.yaml
+++ b/gulimall-ware/src/main/resources/application.yaml
@@ -2,6 +2,22 @@
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+
+  rabbitmq:
+    addresses: 192.168.110.20
+    port: 5672
+    virtual-host: /
+    # 开启发送端确认
+    publisher-confirms: true
+    # 开启发送端消息抵达队列的确认
+    publisher-returns: true
+    # 只要抵达队列，以异步发送优先回调我们这个returnconfirm
+    template:
+      mandatory: true
+    # 手动ack消息
+    listener:
+      simple:
+        acknowledge-mode: manual
 #spring:
 #  datasource:
 #    username: root
