--- a/gulimall-coupon/src/main/resources/application.yaml
+++ b/gulimall-coupon/src/main/resources/application.yaml
@@ -18,3 +18,19 @@
 #      id-type: auto
 #server:
 #  port: 7000
+spring:
+  cloud:
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: 192.168.110.20:8333
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+feign:
+  sentinel:
+    enabled: true
