--- a/gulimall-member/src/main/resources/application.yaml
+++ b/gulimall-member/src/main/resources/application.yaml
@@ -31,6 +31,21 @@ spring:
 
   session:
     store-type: redis
+  cloud:
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: 192.168.110.20:8333
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+feign:
+  sentinel:
+    enabled: true
 
 logging:
   level:
