--- a/gulimall-order/src/main/resources/application.yaml
+++ b/gulimall-order/src/main/resources/application.yaml
@@ -51,6 +51,17 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual
+  cloud:
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: 192.168.110.20:8333
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 logging:
   level:
@@ -61,3 +72,7 @@ gulimall:
     core-size: 20
     max-size: 200
     keep-alive-time: 10
+
+feign:
+  sentinel:
+    enabled: true
