--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -87,6 +87,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!--使用spring-cloud-starter-alicloud-oss替代-->
         <!--        <dependency>-->
@@ -112,6 +116,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.18.RELEASE</version>
             </plugin>
         </plugins>
     </build>
