--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -11,6 +11,17 @@ spring:
     cache: false
   session:
     store-type: redis
+  cloud:
+    sentinel:
+      transport:
+        dashboard: 192.168.110.20:8333
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
 gulimall:
   thread:
     core-size: 20
@@ -40,3 +51,6 @@ gulimall:
 logging:
   level:
     com.tim.gulimall: debug
+feign:
+  sentinel:
+    enabled: true
