--- a/gulimall-ware/src/main/resources/application.yaml
+++ b/gulimall-ware/src/main/resources/application.yaml
@@ -18,6 +18,21 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual
+  cloud:
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: 192.168.110.20:8333
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+
+feign:
+  sentinel:
+    enabled: true
 #spring:
 #  datasource:
 #    username: root
