--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gulimall-auth-server</module>
         <module>gulimall-third-part</module>
         <module>gulimall-cart</module>
+        <module>gulimall-seckill</module>
     </modules>
 
 </project>
