--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -15,6 +15,14 @@ spring:
     sentinel:
       transport:
         dashboard: 192.168.110.20:8333
+  zipkin:
+    base-url: http://192.168.110.20:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 management:
   endpoints:
