--- a/gulimall-auth-server/src/main/resources/application.yaml
+++ b/gulimall-auth-server/src/main/resources/application.yaml
@@ -18,6 +18,14 @@ spring:
     port: 6379
   session:
     store-type: redis
+  zipkin:
+    base-url: http://192.168.110.20:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 feign:
   sentinel:
