--- a/gulimall-search/src/main/resources/application.yaml
+++ b/gulimall-search/src/main/resources/application.yaml
@@ -22,6 +22,14 @@ spring:
   elasticsearch:
     rest:
       uris: 192.168.110.20:9200
+  zipkin:
+    base-url: http://192.168.110.20:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 server:
   port: 12000
 
