--- a/gulimall-ware/src/main/resources/application.yaml
+++ b/gulimall-ware/src/main/resources/application.yaml
@@ -23,6 +23,14 @@ spring:
       transport:
         port: 8719
         dashboard: 192.168.110.20:8333
+  zipkin:
+    base-url: http://192.168.110.20:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 management:
   endpoints:
